# yogi-libs

./: CMakeLists.txt  README.md  cmake-clean.sh  yogi-libs.code-workspace
math/: CMakeLists.txt  math.hpp
math/linear_algebra/: TMatrix.hpp  TVector.hpp
math/test/: CMakeLists.txt  test_TMatrix.cpp  test_TVector.cpp
math/trigonometry/: calculations.hpp  constants.hpp  conversions.cpp  conversions.hpp
